made changes for image picker

--- a/client/android/app/src/main/res/values/styles.xml
+++ b/client/android/app/src/main/res/values/styles.xml
@@ -3,6 +3,15 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
+        <style name="DefaultExplainingPermissionsTheme" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <!-- Used for the buttons -->
+        <item name="colorAccent">@color/your_color</item>
+
+        <!-- Used for the title and text -->
+        <item name="android:textColorPrimary">@color/your_color</item>
+
+        <!-- Used for the background -->
+        <item name="android:background">@color/your_color</item>
     </style>
 
 </resources>
