--- a/client/android/app/src/main/res/values/colors.xml
+++ b/client/android/app/src/main/res/values/colors.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <item name="splashBackground" type="color">#050C16FF</item>
+    <item name="splashBackground" type="color">#A4FAFF</item>
 </resources>
